--- a/Home.html
+++ b/Home.html
@@ -846,7 +846,11 @@
                         <span class="fa fa-quote-left"></span>
                     </div>
                     <div class="container d-sm-flex justify-content-center">
-                        <p class="Crp">a</p>
+                        <p class="Crp">
+                            The most amazing food ever! And </br>
+                            also the staff is so nice to everyone. </br>
+                            I highly recommend buying food from here. </br> 
+                        </p>
                     </div>
                     <div class="container d-sm-flex justify-content-center">
                         <h3 class="Crh3">Binod Chaudhary</h3>
@@ -861,7 +865,10 @@
                         <span class="fa fa-quote-left"></span>
                     </div>
                     <div class="container d-sm-flex justify-content-center">
-                        <p class="Crp">a</p>
+                        <p class="Crp">
+                            The food is excellent, generous portions </br>
+                            and great prices. The service was fast and friendly. </br>
+                        </p>
                     </div>
                     <div class="container d-sm-flex justify-content-center">
                         <h3 class="Crh3">madan Bhandary</h3>
@@ -880,7 +887,12 @@
                         <span class="fa fa-quote-left"></span>
                     </div>
                     <div class="container d-sm-flex justify-content-center">
-                        <p class="Crp">a</p>
+                        <p class="Crp">
+                            I had breakfast there this one time. </br>
+                            All were well beyond my expectations. </br> 
+                            Everything is so fresh. </br>
+                            Best clam chowder I have ever had. 
+                        </p>
                     </div>
                     <div class="container d-sm-flex justify-content-center">
                         <h3 class="Crh3">Samjhana Shah</h3>
@@ -891,11 +903,15 @@
                 </div>
                 <div>
                     <div class="container d-flex justify-content-center">
-                        <img class="img-fluid rounded-circle" src="C4.png" alt="abc"/>
+                        <img class="img-fluid rounded-circle" src="C4.jpg" alt="abc"/>
                         <span class="fa fa-quote-left"></span>
                     </div>
                     <div class="container d-sm-flex justify-content-center">
-                        <p class="Crp">a</p>
+                        <p class="Crp">
+                            Best clam chowder I ever had. </br>
+                            Southwest Salad was great. </br>
+                            Homemade dinner rolls. The staff was so friendly!
+                        </p>
                     </div>
                     <div class="container d-sm-flex justify-content-center">
                         <h3 class="Crh3">Keshab Bhattarai</h3>
@@ -910,11 +926,13 @@
             <div class="container d-flex flex-lg-row justify-content-around">
                 <div>
                     <div class="container d-flex justify-content-center">
-                        <img class="img-fluid rounded-circle" src="C5.jpg" alt="abc"/>
+                        <img class="img-fluid rounded-circle" src="C5.png" alt="abc"/>
                         <span class="fa fa-quote-left"></span>
                     </div>
                     <div class="container d-sm-flex justify-content-center">
-                        <p class="Crp">a</p>
+                        <p class="Crp">
+                            Huge portions. Amazing food. Superb service.
+                        </p>
                     </div>
                     <div class="container d-sm-flex justify-content-center">
                         <h3 class="Crh3">Abhishek Adhikari</h3>
@@ -929,10 +947,14 @@
                         <span class="fa fa-quote-left"></span>
                     </div>
                     <div class="container d-sm-flex justify-content-center">
-                        <p class="Crp">a</p>
+                        <p class="Crp">
+                            We had a delicious breakfast. </br>
+                            Great service and even got a </br>
+                            morning hello from the owner.
+                        </p>
                     </div>
                     <div class="container d-sm-flex justify-content-center">
-                        <h3 class="Crh3">Mina Limbu</h3>
+                        <h3 class="Crh3">Manisha Koirala</h3>
                     </div>
                     <div class="container d-sm-flex justify-content-center">
                         <p class="Crp">Customer</p>
