Opening with Django

--- a/Home.html
+++ b/Home.html
@@ -216,7 +216,7 @@
         }
         #third
         {
-            background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ) ,url("g.jpg");
+            background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ) ,url("c.jpg");
             height: 935px;
             background-position: center;
             background-repeat: no-repeat;
@@ -224,7 +224,7 @@
         }
         #fourth
         {
-            background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ) ,url("c.jpg");
+            background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ) ,url("d.jpg");
             height: 935px;
             background-position: center;
             background-repeat: no-repeat;
@@ -727,7 +727,7 @@
             with our team, guests and shareholders is our opportunity to create an experience that FEEDs – Far Exceeds Expectations Daily – and
             show how much we care.”
           </p>
-          <a href="#" class="btn font-weight-bold px-5 py-2" id="row1_btn">View Our Stories</a>
+          <a href="#" class="btn font-weight-bold px-5 py-2">View Our Stories</a>
         </div>
       </div>
     </div>
